tests/e2e/dot_mutation_invalid.story
s = "foo"
s = s.a.foo()
